--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,21 @@
 {
   "name": "issue-5973",
   "dependencies": {
-    "ember": "~2.5.0",
+    "ember": "2.6.0",
     "ember-cli-shims": "0.1.1",
     "ember-cli-test-loader": "0.2.2",
-    "ember-qunit-notifications": "0.1.0"
+    "ember-qunit-notifications": "0.1.0",
+    "bootstrap": "~3.3.6",
+    "pretender": "~0.12.0",
+    "Faker": "~3.0.0",
+    "gmaps-for-apps": "~0.5.9",
+    "lodash": "~3.10.0",
+    "antiscroll": "git://github.com/Addepar/antiscroll#e0d1538cf4f3fd61c5bedd6168df86d651f125da",
+    "jquery-mousewheel": "~3.1.4",
+    "jquery-ui": "~1.11.4",
+    "js-xlsx": "^0.8.0",
+    "d3": "~3.5.3",
+    "vis": "^4.15.0",
+    "font-awesome": "~4.5.0"
   }
 }
