--- a/package.json
+++ b/package.json
@@ -20,23 +20,51 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
-    "ember-ajax": "0.7.1",
-    "ember-cli": "2.5.1",
+    "ember-ajax": "2.4.1",
+    "ember-can": "0.8.1",
+    "ember-charts": "1.0.0",
+    "ember-cli": "^2.6.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-babel": "^5.1.6",
+    "ember-cli-content-security-policy": "0.4.0",
     "ember-cli-dependency-checker": "^1.2.0",
+    "ember-cli-deploy": "0.5.1",
+    "ember-cli-dotenv": "1.0.4",
+    "ember-cli-flash": "1.3.15",
+    "ember-cli-g-maps": "stevenwu/ember-cli-g-maps#8b2466f7e8f80086df2e99f5662fc8624afe9ce9",
     "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-jshint": "^1.0.0",
+    "ember-cli-mirage": "0.2.0",
+    "ember-cli-moment-shim": "1.2.0",
     "ember-cli-qunit": "^1.4.0",
+    "ember-cli-randoport": "1.0.1",
     "ember-cli-release": "0.2.8",
     "ember-cli-sri": "^2.1.0",
+    "ember-cli-template-lint": "0.4.11",
     "ember-cli-uglify": "^1.2.0",
-    "ember-data": "^2.5.0",
+    "ember-collection": "git+https://github.com/emberjs/ember-collection.git#dd4a0b32eb93b09260f69a4055d9b18dd184347c",
+    "ember-composable-helpers": "0.21.1",
+    "ember-concurrency": "0.6.2",
+    "ember-cp-validations": "2.7.2",
+    "ember-data": "2.6.0",
+    "ember-disable-proxy-controllers": "^1.0.1",
     "ember-export-application-global": "^1.0.5",
+    "ember-font-awesome": "2.1.0",
     "ember-load-initializers": "^0.5.1",
+    "ember-moment": "6.1.0",
+    "ember-pagefront": "0.11.1",
     "ember-resolver": "^2.0.3",
+    "ember-route-action-helper": "0.3.0",
+    "ember-simple-auth": "1.1.0-beta.3",
+    "ember-table": "artych/ember-table#1181b1c5d7271c8d276c5ba015d95dce4a9930a3",
+    "ember-test-selectors": "0.0.3",
+    "ember-truth-helpers": "1.2.0",
+    "emberx-file-input": "1.0.0",
+    "emberx-select": "2.1.1",
+    "emberx-xml-http-request": "0.1.0",
+    "liquid-fire": "0.23.1",
     "loader.js": "^4.0.1"
   }
 }
